--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -4,4 +4,102 @@
 #header {
     height: 100vh;
     background-color: $creme;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+
+    h1 {
+        margin-top: 0;
+        font-family: 'Asap';
+        font-size: 80px;
+        font-weight: 400;
+        color: $indigo;
+        width: fit-content;
+        justify-self: center;
+        position: relative;
+
+        &:after {
+            content: "";
+            display: flex;
+            position: absolute;
+            left: 0;
+            right: 0;
+            margin-left: auto;
+            margin-right: auto;
+            width: 80%;
+            height: 5px;
+            background-color: $indigo;
+        }
+    }
+
+    #button-down {
+        justify-self: center;
+        width: 30rem;
+        border: none;
+        background-image: url("./go_down.svg");
+        background-position: center;
+        background-color: transparent;
+        background-repeat: no-repeat;
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        justify-content: center;
+        transition: transform 0.2s;
+        transform: translateY(0px);
+
+
+
+        &:hover {
+            cursor: pointer;
+            transform: translateY(10px);
+            transition: transform 0.2s;
+
+            div {
+                animation: moveUpDownScrollButton 1s linear infinite;
+            }
+        }
+
+        &:active {
+            transform: translateY(15px);
+        }
+
+        h2 {
+            color: $indigo;
+            text-anchor: middle;
+            font-family: "Asap";
+            font-weight: 450;
+            font-size: 22px;
+            align-self: end;
+        }
+
+        div {
+            background-image: url("./arrow_down.svg");
+            background-position: center;
+            background-color: transparent;
+            background-repeat: no-repeat;
+            background-size: 2rem;
+            width: 4rem;
+            height: 4rem;
+            justify-self: center;
+        }
+    }
+
+    section {
+        background-image: url("./wave_header.svg");
+        background-position: center;
+        background-color: transparent;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+}
+
+
+@keyframes moveUpDownScrollButton {
+
+    0%,
+    100% {
+        transform: translateY(0px);
+    }
+
+    50% {
+        transform: translateY(8px);
+    }
 }
