--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -33,7 +33,7 @@
                 color: $indigo;
                 text-decoration: none;
                 text-decoration: inherit;
-                color: inherit;
+                color: $charcoal;
                 position: relative;
                 display: inline-block;
 
@@ -45,7 +45,7 @@
                     bottom: 0;
                     width: 100%;
                     height: 3px;
-                    background-color: $indigo;
+                    background-color: $charcoal;
                     transform: scaleX(0);
                     transform-origin: bottom right;
                     transition: transform 0.2s ease;
