--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&display=swap');
+@import "./utils/variables.scss";
 
 html {
   padding: 0;
@@ -13,6 +14,21 @@ body {
   font-size: 18px;
   font-weight: 500;
   width: 100vw;
+  overflow-x: hidden;
+  overflow-y: scroll;
+
+  &::-webkit-scrollbar{
+    width: 10px;
+    height: 90vh;
+  }
+  &::-webkit-scrollbar-thumb{
+    background-color: $charcoal;
+  }
+  &::-webkit-scrollbar-track {
+    display: none;
+  }
 }
 
-// .class all the site common content
+main{
+  width: 100vw;
+}
