--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -65,8 +65,6 @@
         grid-row: 1;
         grid-column: 2;
         justify-self: end;
-        background-color: $charcoal;
-        color: white;
         height: fit-content;
         width: fit-content;
         padding-inline: 1.5rem;
@@ -82,6 +80,12 @@
         &:hover {
             color: $charcoal;
             background-color: $grey;
+            box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+            transition: box-shadow 0.5s;
+        }
+
+        &:active {
+            transform: translateY(4px);
         }
     }
 }
@@ -95,4 +99,14 @@
 .navbar-link-selected {
     text-decoration: underline;
     font-weight: 700;
+}
+
+#not-on-contact-page {
+    background-color: $charcoal;
+    color: white;
+}
+
+#on-contact-page {
+    color: $charcoal;
+    background-color: $grey;
 }
