--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -60,8 +60,9 @@
         }
     }
 
-    button {
+    .button {
         border: none;
+        text-decoration: none;
         grid-row: 1;
         grid-column: 2;
         justify-self: end;
