:sparkles: | create liste articles component

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -68,6 +68,7 @@
             font-weight: 450;
             font-size: 22px;
             align-self: end;
+            user-select: none;
         }
 
         div {
