--- a/src/index.scss
+++ b/src/index.scss
@@ -39,9 +39,6 @@ body {
 }
 
 #wave-main-bottom {
-  background-image: url("./wave_bottom.svg");
-  background-position: center;
-  background-color: transparent;
-  background-repeat: no-repeat;
-  background-size: cover;
+  width: 100vw;
+  align-self: flex-end;
 }
