--- a/src/pages/articles/articles.scss
+++ b/src/pages/articles/articles.scss
@@ -3,17 +3,14 @@
 #main-articles-section {
     background-color: $grey;
     width: 100vw;
-    height: 110vh; //to change
+    height: min-content; //to change
     display: grid;
     grid-template-rows: 1fr 7rem;
 
     #articles-container {
         height: 200vh;
         width: 70vw;
-        border: 2px $brown solid;
-        justify-self: center;
-        border-radius: 12px;
-        box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-        background-color: $grey;
+        display: grid;
+        grid-template-columns: 30rem 1fr;
     }
 }
