:wrench: | working on switching articles

--- a/src/components/listArticles/listArticles.scss
+++ b/src/components/listArticles/listArticles.scss
@@ -3,6 +3,8 @@
 .main-list-articles {
     height: 80vh;
     width: 27rem;
+    grid-column: 1;
+    grid-row: 1;
     background-image: url("./menu.svg");
     background-position: left;
     background-color: transparent;
