--- a/src/pages/articles/articles.scss
+++ b/src/pages/articles/articles.scss
@@ -8,9 +8,10 @@
     grid-template-rows: 1fr 7rem;
 
     #articles-container {
-        height: 200vh;
-        width: 70vw;
+        height: fit-content;
+        width: 100vw;
         display: grid;
         grid-template-columns: 30rem 1fr;
+        padding-bottom: 3rem;
     }
 }
