:sparkles: | create about page

--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -5,7 +5,7 @@
     width: 100vw;
     height: 110vh; //to change
     display: grid;
-    grid-template-rows: 1fr 7rem;
+    grid-template-rows: 1fr 3rem 7rem;
 
     #form-container {
         display: grid;
