--- a/src/components/listArticles/listArticles.scss
+++ b/src/components/listArticles/listArticles.scss
@@ -1,7 +1,7 @@
 @import "../../utils/variables.scss";
 
 .main-list-articles {
-    height: 80vh;
+    height: 65vh;
     width: 27rem;
     grid-column: 1;
     grid-row: 1;
@@ -72,7 +72,7 @@
         cursor: pointer;
         align-self: center;
         justify-self: center;
-        margin-right: 3rem;
+        margin-left: 2rem;
         display: flex;
         justify-content: center;
         background-color: transparent;
