--- a/src/pages/articles/articles.scss
+++ b/src/pages/articles/articles.scss
@@ -5,7 +5,7 @@
     width: 100vw;
     height: min-content; //to change
     display: grid;
-    grid-template-rows: 1fr 7rem;
+    grid-template-rows: 1fr 3rem 7rem;
 
     #articles-container {
         height: fit-content;
