--- a/src/components/articles/article.scss
+++ b/src/components/articles/article.scss
@@ -1,14 +1,31 @@
 @import "../../utils/variables.scss";
 
-#article-blog {
+.article-blog {
     width: 70vw;
     max-width: 55rem;
     // height: fit-content;
-    height: 200vh;
+    height: fit-content;
+    padding-block: 3rem;
     border: 2px solid $indigo;
     grid-column: 1 / span 2;
     grid-row: 1;
     justify-self: center;
     border-radius: 12px;
     margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    padding-inline: 3rem;
+    font-family: 'Asap';
+
+    h2{
+        margin-left: 3rem;
+    }
+    section{
+        align-self: flex-end;
+        display: flex;
+        justify-content: end;
+    }
+    p{
+        text-indent: 2rem;
+    }
 }
