--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,11 +3,79 @@
 #main-home-section{
     background-color: $grey;
     width: 100vw;
-    height: 110vh; //to change
     display: grid;
-    grid-template-rows: 7rem 1fr 3rem 7rem;
+    grid-template-rows: 7rem 1fr 7rem 7rem;
 
     #wave-main-bottom{
         grid-row: 4;
+    }
+    
+    h2{
+        text-align: center;
+    }
+
+    #link-container{
+        display: grid;
+        width: 100vw;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 10rem 1fr 7rem 1fr 1fr;
+
+        div{
+            background-repeat: no-repeat;
+            background-position: center;
+            background-color: transparent;
+            width: 70%;
+            background-size: contain;
+        }
+
+        #cow{
+            grid-column: 1;
+            grid-row: 1;
+            justify-self: end;
+            align-self: end;
+        }
+
+
+        #first-bulle{
+            grid-column: 2 / span 3;
+            background-image: url("./1bulle_unselected.png");
+            display: flex;
+            text-align: center;
+            justify-content: center;
+            flex-direction: column;
+            p{
+            margin-left: 7rem;
+            }
+        }
+
+        #first-path{
+            grid-row: 2;
+            grid-column: 2;
+        }
+
+        #second-bulle{
+            grid-row: 3;
+            grid-column: 1 /span 2;
+            background-image: url("./2bulle_unselected.png");
+            justify-self: center;
+        }
+
+        #truck{
+            grid-row: 3;
+            grid-column: 3;
+        }
+
+        #second-path{
+            grid-row: 4;
+            grid-column: 2;
+        }
+        #factory{
+            grid-row: 5;
+            grid-column: 1;
+        }
+        #third-bulle{
+            grid-row: 5;
+            grid-column: 2 / span 3;
+        }
     }
 }
