:sparkles: | create articles

--- a/src/components/articles/3article/article.scss
+++ b/src/components/articles/3article/article.scss
@@ -2,4 +2,9 @@
     #logo-powerautomate{
         align-self: center;
     }
+    .img-flux-suppression{
+        width: 60%;
+        align-self: center;
+        border-radius: 12px;
+    }
 }
