--- a/src/components/articles/article.scss
+++ b/src/components/articles/article.scss
@@ -23,7 +23,11 @@
     section{
         align-self: flex-end;
         display: flex;
+        flex-direction: column;
         justify-content: end;
+        span{
+            text-align: end;
+        }
     }
     p{
         text-indent: 2rem;
