--- a/src/components/entreprise/entreprise.scss
+++ b/src/components/entreprise/entreprise.scss
@@ -77,6 +77,8 @@
         #histoire-eurial{
             width: 60%;
         }
-
+        #siege-img{
+            width: 70%;
+        }
     }
 }
