:wrench: | add content to articles

--- a/src/components/articles/4article/article.scss
+++ b/src/components/articles/4article/article.scss
@@ -1,6 +1,7 @@
 #article-1{
-    #logo-eurial{
-        width: 30%;
+
+    .img-modification{
+        width: 60%;
         align-self: center;
     }
 }
