--- a/src/components/articles/1article/article.scss
+++ b/src/components/articles/1article/article.scss
@@ -3,4 +3,8 @@
         width: 30%;
         align-self: center;
     }
+    #organnigrame{
+        width: 80%;
+        align-self: center;
+    }
 }
