:lipstick: | stylizing home page link

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -18,21 +18,44 @@
         display: grid;
         width: 100vw;
         grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 10rem 1fr 7rem 1fr 1fr;
+        grid-template-rows: 1fr 8rem 1fr 7rem 1fr 1fr 5rem;
 
-        div{
+        img{
+            user-select: none;
+        }
+
+        .bulle{
             background-repeat: no-repeat;
             background-position: center;
             background-color: transparent;
-            width: 70%;
+            width: 45rem;
+            height: 15rem;
             background-size: contain;
-        }
+            text-decoration: none;  
+            p{
+                user-select: none;
+                font-family: 'Asap';
+                color: $indigo;
+                height: 100%;
+                display: flex;
+                align-items: center;
+            }   
+            
+
+            &:hover{
+                cursor: pointer;
+                p{
+                    color: $grey;
+                }
+            }
+        } 
 
         #cow{
             grid-column: 1;
             grid-row: 1;
             justify-self: end;
             align-self: end;
+            width: 4rem;
         }
 
 
@@ -43,14 +66,20 @@
             text-align: center;
             justify-content: center;
             flex-direction: column;
+            margin-left: 4rem;
             p{
             margin-left: 7rem;
+            align-self: center;
+            }
+            &:hover{
+            background-image: url("./1bulle_selected.png");
             }
         }
 
         #first-path{
             grid-row: 2;
             grid-column: 2;
+            justify-self: center;
         }
 
         #second-bulle{
@@ -58,11 +87,27 @@
             grid-column: 1 /span 2;
             background-image: url("./2bulle_unselected.png");
             justify-self: center;
+            margin-left: 10rem;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            p{
+                justify-self: center;
+                margin-left: 3rem;
+                width: 15rem;
+                text-align: center;
+            }
+            &:hover{
+            background-image: url("./2bulle_selected.png");
+            }
         }
 
         #truck{
             grid-row: 3;
             grid-column: 3;
+            align-self: center ;
+            width: 5rem;
+
         }
 
         #second-path{
@@ -72,10 +117,57 @@
         #factory{
             grid-row: 5;
             grid-column: 1;
+            align-self: center;
+            justify-self: end;
+            width: 5rem;
+            margin-right: 2rem;
         }
         #third-bulle{
             grid-row: 5;
             grid-column: 2 / span 3;
+            background-image: url("./3bulle_unselected.png");
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            p{
+                margin-left: 8rem;
+            }
+            &:hover{
+                background-image: url("./3bulle_selected.png");
+                }
+    
         }
+        #third-path{
+            grid-row: 5 / span 6;
+            grid-column: 2;
+            align-self: center;
+            margin-top: 5rem;
+        }
+        #cheese{
+            grid-row: 7;
+            grid-column: 2 / span 3;
+            justify-self: center;
+            width: 4rem;
+        }
+        #fourth-bulle{
+            grid-row: 6 / span 7;
+            grid-column: 1 / span 2;
+            background-image: url("./2bulle_unselected.png");
+            align-self: end;
+            justify-self: center;
+            display: flex;
+            flex-direction: column;
+                margin-left: 8rem;
+                justify-content: center;
+            p {
+                margin-left: 4rem;
+            }
+            &:hover{
+                background-image: url("./2bulle_selected.png");
+                }
+    
+        }            
+
     }
 }
