:wrench: | make the contact form work

--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -12,7 +12,7 @@
         grid-template-columns: 10rem 1fr;
         justify-self: center;
         align-self: center;
-        border: 2px solid $brown;
+        border: 2px solid $indigo;
         border-radius: 16px;
         box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
         width: 70vw;
@@ -23,7 +23,7 @@
             flex-direction: column;
             justify-content: space-around;
             align-items: center;
-            border-right: 3px solid $brown;
+            border-right: 3px solid $indigo;
 
             img {
                 width: 4.5rem;
@@ -85,7 +85,7 @@
 
                         input {
                             background-color: $grey;
-                            border: $brown 2px solid;
+                            border: $indigo 2px solid;
                             border-radius: 8px;
                             height: 2rem;
                             padding-left: 0.5rem;
@@ -100,7 +100,7 @@
 
                         textarea {
                             background-color: $grey;
-                            border: $brown 2px solid;
+                            border: $indigo 2px solid;
                             border-radius: 8px;
                             box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
                             resize: none;
@@ -143,6 +143,15 @@
                         &:active {
                             transform: translateY(0px);
                         }
+                    }
+
+                    #loading-icon{
+                        width: 4rem;
+                        height: 4rem;
+                        grid-column: 1 / span 2;
+                        justify-self: center;
+                        margin-top: 1.5rem;
+
                     }
                 }
             }
