--- a/src/components/entreprise/entreprise.scss
+++ b/src/components/entreprise/entreprise.scss
@@ -65,6 +65,7 @@
         h2{
             text-align: center;
             font-weight: 400;
+            margin-block-end: 0em;
         }
         img{
             align-self: center;
@@ -75,7 +76,7 @@
         }
 
         #histoire-eurial{
-            width: 60%;
+            width: 70%;
         }
         #siege-img{
             width: 70%;
